fix alignment issue- IE

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6197,7 +6197,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 7rem;
   position: relative;
   width: 5%;
-  top: 2.8rem;
+  top: 3.5rem;
 }
 
 .team-setup-squad-block .team-setup-squad-content {
@@ -6244,7 +6244,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   display: block;
   font-size: inherit;
   position: absolute;
-  top: 22.8rem;
+  top: 23.2rem;
   width: 95%;
 }
 
@@ -6316,7 +6316,7 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
   height: 3%;
   left: 35%;
   position: absolute;
-  top: 23rem;
+  top: 23.5rem;
   width: 1.4%;
 }
 
